--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -11,11 +11,13 @@ $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $gradient : linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
+$gradientheart: linear-gradient(180deg, rgba(147,86,220,1) 0%,  rgba(255,121,218,1) 100%);
 
 @keyframes spin{
     0%{transform: rotate(0deg);}
     100%{transform: rotate(360deg);}
 }
+
 
 @keyframes fade{
     0%{visibility: visible;}
@@ -23,8 +25,14 @@ $gradient : linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 1
 }
 
 @keyframes appear{
-    0%{transform: scale(0)}
-    100%{transform: scale(1)}
+    0%{
+        transform: translateY(50%);
+        opacity: 0;
+}
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 body{
@@ -107,8 +115,6 @@ header{
         object-fit: cover;
     }
 }
- 
-
 
 .menus{
     background: white;
@@ -128,21 +134,46 @@ header{
 
     .menu-header{
         flex-direction: row;
+        i{
+            font-size: 28px;
+            position: absolute;
+            right: 30px;
+            top: 330px;
+            @media screen and (min-width: 800px){
+                top: 50%;
+                left: 88%
+            }
+        }
+        .fas{
+            color: transparent;
+            background-image: $gradientheart;
+            background-clip: text;
+            opacity: 0;
+            cursor: pointer;
+            &:hover{
+                opacity: 1;
+            }
+        } 
     }
 }
 
-
 .menu-header-title{
     font-family: 'shrikhand';
+}
+
+.grid-bloc{
+    display: grid;
+    grid-gap: 10px;
+    @media screen and (min-width: 800px){
+        grid-gap: 30px;
     }
-
-
+}
+   
 .grid{
     display: grid;
     gap: 10px;
     @media screen and (min-width: 800px){
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
         grid-auto-flow: column;
         grid-gap: 30px;
     }
@@ -180,11 +211,61 @@ header{
     border-radius: 15px;
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    animation: appear 2s;
+    animation: appear 1s;
     animation-fill-mode: both;
+    overflow: hidden;
+    @for $i from 2 through 4 {
+        &:nth-child(#{$i}){
+            animation-delay: 100ms * $i
+        }
+    }
     @media screen and (min-width: 800px){
         margin-top: -13px;
     }
+    .menu-check-confirmation{
+        background-color: $color-tertiary;
+        margin: -16px -62px -16px 4px;
+        width: 15%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        align-content: center; 
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        transition-duration: 0.5s;
+        @media screen and (min-width: 800px){
+            margin: -16px -77px -16px 4px;
+            width: 20%;
+        }
+        .menu-item{
+            background-color: white;
+            height: 33px;
+            width: 60%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            margin-left: 10px;
+            transform: rotate(180deg);
+            transition-duration: 0.5s;
+            @media screen and (min-width: 800px){
+                height: 34px;
+                width: 54%;
+                margin-left: 16px;
+            }
+        }
+        .menu-item-icon{
+            color: $color-tertiary;
+        }
+
+}
+&:hover .menu-check-confirmation{
+    margin-right: -1px;
+}
+
+&:hover .menu-item{
+    transform: rotate(0);
+  }
 }
 
 .menu-case-dish{
@@ -196,6 +277,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     .price{
         font-weight: bold;
         padding-right: 10px;
@@ -208,23 +290,6 @@ header{
         margin-bottom: -8px;
     }
 }
-
-.menu-check{
-    background: $color-tertiary;
-    border-radius: 0 15px 15px 0;
-    padding: 0 13px;
-    height: 100%;
-    background-position: right;
-    i{
-        font-size: 30px;
-        color: white;
-        padding-top: 15px;
-        animation: spin 1s both;
-    }
-}
-/*.menu-check:hover{
-    background-position: right;
-}*/
 
 
 /*bouton commander*/
@@ -244,6 +309,7 @@ header{
         padding: 16px 32px;
         border-radius: 32px;
         box-shadow: 2px 5px 13px -4px #000000;
+        cursor: pointer;
     }
 }
 /*footer*/
