--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -138,7 +138,7 @@ header{
             font-size: 28px;
             position: absolute;
             right: 30px;
-            top: 330px;
+            top: 362px;
             @media screen and (min-width: 800px){
                 top: 50%;
                 left: 88%
@@ -148,6 +148,7 @@ header{
             color: transparent;
             background-image: $gradientheart;
             background-clip: text;
+            -webkit-background-clip: text;
             opacity: 0;
             cursor: pointer;
             &:hover{
@@ -224,7 +225,7 @@ header{
     }
     .menu-check-confirmation{
         background-color: $color-tertiary;
-        margin: -16px -62px -16px 4px;
+        margin: -16px -70px -16px 4px;
         width: 15%;
         height: 100%;
         display: flex;
@@ -247,7 +248,9 @@ header{
             border-radius: 100%;
             margin-left: 10px;
             transform: rotate(180deg);
+            -webkit-transform: rotate(180deg);
             transition-duration: 0.5s;
+            -webkit-animation: rotate 0.5s;
             @media screen and (min-width: 800px){
                 height: 34px;
                 width: 54%;
