--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,13 @@ header .logo {
   border-radius: 20px;
   position: relative;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+.working__stephover {
+  opacity: 0.8;
+  transition: 0.3s;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+  background: #9356dc;
 }
 @media screen and (min-width: 800px) {
   .working__step {
@@ -237,6 +244,7 @@ header .logo {
   color: transparent;
   background-image: linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
   background-clip: text;
+  -webkit-background-clip: text;
   opacity: 0;
 }
 .restaurant .card-description .fas:hover {
