--- a/sass/main.scss
+++ b/sass/main.scss
@@ -150,9 +150,17 @@ header {
   border-radius: 20px;
   position: relative;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+  &hover{
+    opacity: 0.8;
+    transition: 0.3s;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+    background: $color-primary;
+  }
   @media screen and (min-width: 800px) {
     margin: 20px 70px;
   }
+
   .working_number {
     background-color: $color-primary;
     color: white;
@@ -246,6 +254,7 @@ header {
       color: transparent;
       background-image: $gradientheart;
       background-clip: text;
+      -webkit-background-clip: text;
       opacity: 0;
       &:hover {
         opacity: 1;
