--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,15 @@ $gradientheart: linear-gradient(
   rgba(255, 121, 218, 1) 100%
 );
 
+@mixin btn-hover {
+  opacity: 0.8;
+    cursor: pointer;
+    -webkit-transition: .3s;
+    transition: .3s;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -119,7 +128,10 @@ header {
     padding: 16px 32px;
     border-radius: 32px;
     box-shadow: 2px 5px 13px -4px #000000;
-  }
+    &:hover{
+      @include btn-hover;
+    }
+  } 
 }
 
 /*fonctionnement*/
@@ -150,7 +162,11 @@ header {
   border-radius: 20px;
   position: relative;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
+  &:hover{
+    @include btn-hover;
+    background: lighten($color-primary, $amount: 30%);
+  }
+
   @media screen and (min-width: 800px) {
     margin: 20px 70px;
   }
@@ -162,13 +178,13 @@ header {
     border-radius: 50%;
     position: absolute;
     left: -10px;
-  }
-
+  }    
   .working__icon {
     color: #7e7e7e;
     margin: 0 20px;
+    }
   }
-}
+
 
 /*restaurants*/
 .restaurant {
